other-mpol/add-pod-priorityclassname/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-pod-priorityclassname
---
apiVersion: scheduling.k8s.io/v1
kind: PriorityClass
metadata:
  name: non-production
value: 1234
globalDefault: false
description: "This priority class should be used for XYZ service pods only."
